修复部分findbugs检查出来的问题
git-svn-id: http://nutz.googlecode.com/svn/trunk@1459 423f10f2-e3a4-11dd-a6ea-a32d6b26a33d